--- a/clip.ipynb
+++ b/clip.ipynb
@@ -88,7 +88,9 @@
    "source": [
     "\n",
     "\n",
-    "df = pd.read_csv(\"experiments/init/processed_data.csv\")\n",
+    "from text_processing import load_and_process_data\n",
+    "\n",
+    "df = load_and_process_data(\"init\")\n",
     "df.info()\n",
     "df = df.dropna()\n",
     "df = df.rename(columns={\"index\": \"label_index\"})\n",
