--- a/genAI.ipynb
+++ b/genAI.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "execution": {
@@ -48,8 +48,8 @@
      "shell.execute_reply.started": "2024-09-12T08:25:13.173869Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-09-15T08:09:49.299645Z",
-     "start_time": "2024-09-15T08:09:49.193199Z"
+     "end_time": "2024-09-15T08:53:43.236825Z",
+     "start_time": "2024-09-15T08:53:42.977901Z"
     }
    },
    "outputs": [
@@ -57,6 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading pre-processed data...\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 137 entries, 0 to 136\n",
       "Data columns (total 5 columns):\n",
@@ -73,9 +74,10 @@
     }
    ],
    "source": [
+    "from text_processing import load_and_process_data\n",
     "import torch\n",
     "\n",
-    "df = pd.read_csv(\"/Users/yonatanlou/dev/RabbinicWisdomAI/experiments/init/processed_data.csv\")\n",
+    "df = load_and_process_data(\"init\")\n",
     "df.info()\n",
     "df = df.dropna()\n",
     "df = df.rename(columns={\"index\": \"label_index\"})"
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-09-12T08:25:13.614479Z",
@@ -93,8 +95,8 @@
      "shell.execute_reply.started": "2024-09-12T08:25:13.614448Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-09-15T08:10:08.954286Z",
-     "start_time": "2024-09-15T08:10:08.469095Z"
+     "end_time": "2024-09-15T08:53:57.682857Z",
+     "start_time": "2024-09-15T08:53:57.204325Z"
     }
    },
    "outputs": [
@@ -102,7 +104,7 @@
      "data": {
       "text/plain": "Text(0.5, 1.0, 'Histogram of answer length')"
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
